// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlayerDetail renders with no props  1`] = `
<View
  style={
    Object {
      "backgroundColor": "#006400",
      "borderColor": "#005a00",
      "borderWidth": 1,
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "height": 35,
        "justifyContent": "space-around",
        "marginTop": 10,
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#fff",
            "fontSize": 65,
            "fontWeight": "bold",
          },
          Object {
            "fontSize": 125,
          },
        ]
      }
    >
      
    </Text>
  </View>
  <View
    style={
      Object {
        "height": 40,
        "justifyContent": "flex-end",
        "marginBottom": 5,
        "marginLeft": 5,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#fff",
          "fontSize": 17,
          "fontWeight": "bold",
        }
      }
    />
  </View>
</View>
`;

exports[`PlayerDetail renders with players detail and no results  1`] = `
<View
  style={
    Object {
      "backgroundColor": "#006400",
      "borderColor": "#005a00",
      "borderWidth": 1,
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "height": 35,
        "justifyContent": "space-around",
        "marginTop": 10,
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#fff",
            "fontSize": 65,
            "fontWeight": "bold",
          },
          Object {
            "fontSize": 65,
          },
        ]
      }
    >
      8000
    </Text>
  </View>
  <View
    style={
      Object {
        "height": 40,
        "justifyContent": "flex-end",
        "marginBottom": 5,
        "marginLeft": 5,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#fff",
          "fontSize": 17,
          "fontWeight": "bold",
        }
      }
    >
      Jose
    </Text>
  </View>
</View>
`;

exports[`PlayerDetail renders with players detail results  1`] = `
<View
  style={
    Object {
      "backgroundColor": "#006400",
      "borderColor": "#005a00",
      "borderWidth": 1,
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "height": 35,
        "justifyContent": "space-around",
        "marginTop": 10,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "borderColor": "#000",
            "borderRadius": 50,
            "borderWidth": 1,
            "elevation": 2,
            "height": 30,
            "width": 30,
          },
          Object {
            "backgroundColor": "green",
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "borderColor": "#000",
            "borderRadius": 50,
            "borderWidth": 1,
            "elevation": 2,
            "height": 30,
            "width": 30,
          },
          Object {
            "backgroundColor": "red",
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "borderColor": "#000",
            "borderRadius": 50,
            "borderWidth": 1,
            "elevation": 2,
            "height": 30,
            "width": 30,
          },
          Object {
            "backgroundColor": "yellow",
          },
        ]
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#fff",
            "fontSize": 65,
            "fontWeight": "bold",
          },
          Object {
            "fontSize": 65,
          },
        ]
      }
    >
      8000
    </Text>
  </View>
  <View
    style={
      Object {
        "height": 40,
        "justifyContent": "flex-end",
        "marginBottom": 5,
        "marginLeft": 5,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#fff",
          "fontSize": 17,
          "fontWeight": "bold",
        }
      }
    >
      Jose
    </Text>
  </View>
</View>
`;

exports[`PlayerDetail renders with players detail results when there is only one duel  1`] = `
<View
  style={
    Object {
      "backgroundColor": "#006400",
      "borderColor": "#005a00",
      "borderWidth": 1,
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "height": 35,
        "justifyContent": "space-around",
        "marginTop": 10,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "borderColor": "#000",
            "borderRadius": 50,
            "borderWidth": 1,
            "elevation": 2,
            "height": 30,
            "width": 30,
          },
          Object {
            "backgroundColor": "green",
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "borderColor": "#000",
            "borderRadius": 50,
            "borderWidth": 1,
            "elevation": 2,
            "height": 30,
            "width": 30,
          },
          Object {
            "backgroundColor": "grey",
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "borderColor": "#000",
            "borderRadius": 50,
            "borderWidth": 1,
            "elevation": 2,
            "height": 30,
            "width": 30,
          },
          Object {
            "backgroundColor": "grey",
          },
        ]
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#fff",
            "fontSize": 65,
            "fontWeight": "bold",
          },
          Object {
            "fontSize": 65,
          },
        ]
      }
    >
      8000
    </Text>
  </View>
  <View
    style={
      Object {
        "height": 40,
        "justifyContent": "flex-end",
        "marginBottom": 5,
        "marginLeft": 5,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#fff",
          "fontSize": 17,
          "fontWeight": "bold",
        }
      }
    >
      Jose
    </Text>
  </View>
</View>
`;
